--- a/src/PMT/WebBundle/Resources/views/Issue/detail.html.twig
+++ b/src/PMT/WebBundle/Resources/views/Issue/detail.html.twig
@@ -18,341 +18,18 @@
 {% block content %}
     <div class="row">
         <div class="col-lg-8">
-            <div class="accordion">
-                <div class="accordion-group">
-                    <div class="accordion-heading">
-                        <a class="accordion-toggle" data-toggle="collapse" href="#accordion_details">
-                            {{ 'issue.details'|trans }}
-                        </a>
-                    </div>
-                    <div id="accordion_details" class="accordion-body collapse in">
-                        <div class="accordion-inner">
-                            <div class="row">
-                                <div class="col-lg-6">
-                                    <table class="issue-details">
-                                        <tr>
-                                            <td>{{ 'issue.type'|trans }}:</td>
-                                            <td>{{ issue.type.name }}</td>
-                                        </tr>
-                                        <tr>
-                                            <td>{{ 'issue.priority'|trans }}:</td>
-                                            <td>{{ issue.priority.name }}</td>
-                                        </tr>
-                                        <tr>
-                                            <td>{{ 'issue.milestone'|trans }}:</td>
-                                            <td>
-                                                {% if issue.milestone %}
-                                                    {{ issue.milestone.name }}
-                                                {% else %}
-                                                    {{ 'issue.nomilestone'|trans }}
-                                                {% endif %}
-                                            </td>
-                                        </tr>
-                                        <tr>
-                                            <td>{{ 'issue.components'|trans }}:</td>
-                                            <td>value</td>
-                                        </tr>
-                                        <tr>
-                                            <td>{{ 'issue.tags'|trans }}:</td>
-                                            <td>
-                                                {% for tag in issue.tags %}
-                                                    {{ tag.name }},
-                                                {% endfor %}
-                                            </td>
-                                        </tr>
-                                    </table>
-                                </div>
-                                <div class="col-lg-6">
-                                    <table class="issue-details">
-                                        <tr>
-                                            <td>{{ 'issue.status'|trans }}:</td>
-                                            <td>{{ issue.status.name }}</td>
-                                        </tr>
-                                        <tr>
-                                            <td>{{ 'issue.resolution'|trans }}:</td>
-                                            <td>value</td>
-                                        </tr>
-                                    </table>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-            <div class="accordion">
-                <div class="accordion-group">
-                    <div class="accordion-heading">
-                        <a class="accordion-toggle" data-toggle="collapse" href="#accordion_description">
-                            {{ 'issue.description'|trans }}
-                        </a>
-                    </div>
-                    <div id="accordion_description" class="accordion-body collapse in">
-                        <div class="accordion-inner">
-                            {{ issue.description }}
-                        </div>
-                    </div>
-                </div>
-            </div>
-            <div class="accordion">
-                <div class="accordion-group">
-                    <div class="accordion-heading">
-                        <a class="accordion-toggle" data-toggle="collapse" href="#accordion_subtasks">
-                            {{ 'issue.subtasks'|trans }}
-                        </a>
-                    </div>
-                    <div id="accordion_subtasks" class="accordion-body collapse in">
-                        <div class="accordion-inner">
-                            Anim pariatur cliche...
-                        </div>
-                    </div>
-                </div>
-            </div>
-            <div class="accordion">
-                <div class="accordion-group">
-                    <div class="accordion-heading">
-                        <a class="accordion-toggle" data-toggle="collapse" href="#accordion_comments">
-                            {{ 'issue.comments'|trans }}
-                        </a>
-                    </div>
-                    <div id="accordion_comments" class="accordion-body collapse in">
-                        <div class="accordion-inner">
-                            {% include 'FOSCommentBundle:Thread:async.html.twig' with {'id': 'issue:'~issue.project.id~":"~issue.id} %}
-                        </div>
-                    </div>
-                </div>
-            </div>
-            <div class="accordion">
-                <div class="accordion-group">
-                    <div class="accordion-heading">
-                        <a class="accordion-toggle" data-toggle="collapse" href="#accordion_activity">
-                            {{ 'activity.activity_stream'|trans }}
-                        </a>
-                    </div>
-                    <div id="accordion_activity" class="accordion-body collapse">
-                        <div class="accordion-inner">
-                            {% include 'PMTWebBundle:Activity:list.html.twig' with {'view': 'advanced', 'activity': []} %}
-                        </div>
-                    </div>
-                </div>
-            </div>
+            {% include 'PMTWebBundle:Issue:detail_detail.html.twig' with {'issue': issue} %}
+            {% include 'PMTWebBundle:Issue:detail_description.html.twig' with {'issue': issue} %}
+            {% include 'PMTWebBundle:Issue:detail_subtasks.html.twig' with {'issue': issue} %}
+            {% include 'PMTWebBundle:Issue:detail_comments.html.twig' with {'issue': issue} %}
+            {% include 'PMTWebBundle:Issue:detail_activity.html.twig' with {'issue': issue} %}
+
         </div>
         <div class="col-lg-4">
-            <div class="accordion">
-                <div class="accordion-group">
-                    <div class="accordion-heading">
-                        <a class="accordion-toggle">
-                            {{ 'issue.actions'|trans }}
-                        </a>
-                    </div>
-                    <div id="accordion_actions" class="accordion-body in">
-                        <div class="accordion-inner">
-                            <div class="btn-group">
-                                <a class="btn dropdown-toggle" data-toggle="dropdown" href="#">
-                                    {{ issue.status.name }}
-                                    <span class="caret"></span>
-                                </a>
-                                <ul class="dropdown-menu">
-                                    {% for step in backSteps %}
-                                        <li><a href="{{ path('pmtweb_issue_new_step', {
-                                        'projectCode': issue.project.code,
-                                        'id': issue.id,
-                                        'stepId': step.id
-                                        }) }}">{{ step.status.name }}</a></li>
-                                    {% endfor %}
-                                    {% for step in nextSteps %}
-                                        <li><a href="{{ path('pmtweb_issue_new_step', {
-                                        'projectCode': issue.project.code,
-                                        'id': issue.id,
-                                        'stepId': step.id
-                                        }) }}">{{ step.status.name }}</a></li>
-                                    {% endfor %}
-                                </ul>
-                            </div>
-
-                        </div>
-                    </div>
-                </div>
-            </div>
-            <div class="accordion">
-                <div class="accordion-group">
-                    <div class="accordion-heading">
-                        <a class="accordion-toggle" data-toggle="collapse" href="#accordion_people">
-                            {{ 'issue.people'|trans }}
-                        </a>
-                    </div>
-                    <div id="accordion_people" class="accordion-body collapse in">
-                        <div class="accordion-inner">
-                            <table>
-                                <tr>
-                                    <td>{{ 'issue.creator'|trans }}:</td>
-                                    <td>
-                                        <a href="{{ path('pmtweb_user_profile', {'username': issue.creator.username }) }}">{{ issue.creator.username }}</a>
-                                    </td>
-                                </tr>
-                                <tr>
-                                    <td>{{ 'issue.assignee'|trans }}:</td>
-                                    <td>
-                                        {% if issue.assignee %}
-                                            <a href="{{ path('pmtweb_user_profile', {'username': issue.assignee.username }) }}">{{ issue.assignee.username }}</a>
-                                        {% else %}
-                                            open
-                                        {% endif %}
-                                    </td>
-                                </tr>
-                            </table>
-                        </div>
-                    </div>
-                </div>
-            </div>
-            <div class="accordion">
-                <div class="accordion-group">
-                    <div class="accordion-heading">
-                        <a class="accordion-toggle" data-toggle="collapse" href="#accordion_dates">
-                            {{ 'issue.dates'|trans }}
-                        </a>
-                    </div>
-                    <div id="accordion_dates" class="accordion-body collapse in">
-                        <div class="accordion-inner">
-                            <table>
-                                <tr>
-                                    <td>{{ 'issue.created'|trans }}:</td>
-                                    <td><time class="moment" datetime="{{ issue.created|date('Y-m-d\\TH:i:sP') }}"></time></td>
-                                </tr>
-                                <tr>
-                                    <td>{{ 'issue.updated'|trans }}:</td>
-                                    <td><time class="moment" datetime="{{ issue.lastUpdated|date('Y-m-d\\TH:i:sP') }}"></time></td>
-                                </tr>
-                            </table>
-                        </div>
-                    </div>
-                </div>
-            </div>
-            <div class="accordion">
-                <div class="accordion-group">
-                    <div class="accordion-heading">
-                        <a class="accordion-toggle" data-toggle="collapse" href="#accordion_timetracking">
-                            {{ 'issue.timetracking'|trans }}
-                        </a>
-                    </div>
-                    <div id="accordion_timetracking" class="accordion-body collapse in">
-                        <div class="accordion-inner">
-
-                            running on time
-                            <table class="time_tracking">
-                                <tr>
-                                    <td>Estimated:</td>
-                                    <td>4h</td>
-                                    <td class="bar">
-                                        <div class="progress progress-striped">
-                                            <div class="progress-bar" style="width: 100%;"></div>
-                                        </div>
-                                    </td>
-                                </tr>
-                                <tr>
-                                    <td>Logged:</td>
-                                    <td>3h</td>
-                                    <td>
-                                        <div class="progress">
-                                            <div class="progress-bar" style="width:75%;"></div>
-                                        </div>
-                                    </td>
-                                </tr>
-                            </table>
-
-                            running over time
-                            <table class="time_tracking">
-                                <tr>
-                                    <td>Estimated:</td>
-                                    <td>4h</td>
-                                    <td class="bar">
-                                        <div class="progress progress-striped">
-                                            <div class="progress-bar progress-bar-danger" style="width: 100%;"></div>
-                                        </div>
-                                    </td>
-                                </tr>
-                                <tr>
-                                    <td>Logged:</td>
-                                    <td>5h</td>
-                                    <td>
-                                        <div class="progress">
-                                            <div class="bar" style="width:80%;"></div>
-                                            <div class="progress-bar progress-bar-danger" style="width:20%;"></div>
-                                        </div>
-                                    </td>
-                                </tr>
-                            </table>
-
-                            finished on time
-                            <table class="time_tracking">
-                                <tr>
-                                    <td>Estimated:</td>
-                                    <td>4h</td>
-                                    <td class="bar">
-                                        <div class="progress">
-                                            <div class="progress-bar" style="width: 100%;"></div>
-                                        </div>
-                                    </td>
-                                </tr>
-                                <tr>
-                                    <td>Logged:</td>
-                                    <td>3h</td>
-                                    <td>
-                                        <div class="progress">
-                                            <div class="progress-bar progress-bar-success" style="width:100%;"></div>
-                                        </div>
-                                    </td>
-                                </tr>
-                            </table>
-
-                            finished over time
-                            <table class="time_tracking">
-                                <tr>
-                                    <td>Estimated:</td>
-                                    <td>4h</td>
-                                    <td class="bar">
-                                        <div class="progress">
-                                            <div class="progress-bar progress-bar-success" style="width: 100%;"></div>
-                                        </div>
-                                    </td>
-                                </tr>
-                                <tr>
-                                    <td>Logged:</td>
-                                    <td>3h</td>
-                                    <td>
-                                        <div class="progress">
-                                            <div class="progress-bar progress-bar-success" style="width:75%;"></div>
-                                            <div class="progress-bar" style="width:25%;"></div>
-                                        </div>
-                                    </td>
-                                </tr>
-                            </table>
-
-                            finished over time
-                            <table class="time_tracking">
-                                <tr>
-                                    <td>Estimated:</td>
-                                    <td>4h</td>
-                                    <td class="bar">
-                                        <div class="progress">
-                                            <div class="progress-bar progress-bar-danger" style="width: 100%;"></div>
-                                        </div>
-                                    </td>
-                                </tr>
-                                <tr>
-                                    <td>Logged:</td>
-                                    <td>5h</td>
-                                    <td>
-                                        <div class="progress">
-                                            <div class="progress-bar" style="width: 80%;"></div>
-                                            <div class="progress-bar progress-bar-danger" style="width: 20%;"></div>
-                                        </div>
-                                    </td>
-                                </tr>
-                            </table>
-                        </div>
-                    </div>
-                </div>
-            </div>
+            {% include 'PMTWebBundle:Issue:detail_actions.html.twig' with {'issue': issue} %}
+            {% include 'PMTWebBundle:Issue:detail_people.html.twig' with {'issue': issue} %}
+            {% include 'PMTWebBundle:Issue:detail_dates.html.twig' with {'issue': issue} %}
+            {% include 'PMTWebBundle:Issue:detail_timetracking.html.twig' with {'issue': issue} %}
         </div>
     </div>
 {% endblock %}
