--- a/src/PMT/WebBundle/Resources/views/Issue/form.html.twig
+++ b/src/PMT/WebBundle/Resources/views/Issue/form.html.twig
@@ -11,81 +11,11 @@
         {{ form_errors(form) }}
         <div class="row">
             <div class="col-lg-8">
-                <div class="accordion">
-                    <div class="accordion-group">
-                        <div class="accordion-heading">
-                            <a class="accordion-toggle">
-                                {{ 'issue.details'|trans }}
-                            </a>
-                        </div>
-                        <div id="accordion_details" class="accordion-body in">
-                            <div class="accordion-inner">
-                                <div class="form-group">
-                                    {{ form_label(form.summary) }}
-                                    {{ form_widget(form.summary, {'attr': {'class': 'form-control' }}) }}
-                                </div>
-                                <div class="form-group">
-                                    {{ form_label(form.description) }}
-                                    {{ form_widget(form.description, {'attr': {'class': 'form-control', 'rows': '10' }}) }}
-                                </div>
-                                <div class="form-group">
-                                    {{ form_label(form.tags) }}
-                                    {{ form_widget(form.tags, {'attr': {'class': 'form-control' }}) }}
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
+                {% include 'PMTWebBundle:Issue:form_details.html.twig' with {'form': form} %}
             </div>
             <div class="col-lg-4">
-                <div class="accordion">
-                    <div class="accordion-group">
-                        <div class="accordion-heading">
-                            <a class="accordion-toggle" data-toggle="collapse" href="#accordion_meta">
-                                {{ 'issue.meta'|trans }}
-                            </a>
-                        </div>
-                        <div id="accordion_meta" class="accordion-body collapse in">
-                            <div class="accordion-inner">
-                                <div class="form-group">
-                                    {{ form_label(form.project) }}
-                                    {{ form_widget(form.project, {'attr': {'class': 'form-control' }}) }}
-                                </div>
-                                <div class="form-group">
-                                    {{ form_label(form.milestone) }}
-                                    {{ form_widget(form.milestone, {'attr': {'class': 'form-control' }}) }}
-                                </div>
-                                <div class="form-group">
-                                    {{ form_label(form.type) }}
-                                    {{ form_widget(form.type, {'attr': {'class': 'form-control' }}) }}
-                                </div>
-                                <div class="form-group">
-                                    {{ form_label(form.priority) }}
-                                    {{ form_widget(form.priority, {'attr': {'class': 'form-control' }}) }}
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-                <div class="accordion">
-                    <div class="accordion-group">
-                        <div class="accordion-heading">
-                            <a class="accordion-toggle" data-toggle="collapse" href="#accordion_people">
-                                {{ 'issue.people'|trans }}
-                            </a>
-                        </div>
-                        <div id="accordion_people" class="accordion-body collapse in">
-                            <div class="accordion-inner">
-                                <div class="form-group">
-                                    {{ form_label(form.creator) }}
-                                    {{ form_widget(form.creator, {'attr': {'class': 'form-control' }}) }}
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-
-
+                {% include 'PMTWebBundle:Issue:form_meta.html.twig' with {'form': form} %}
+                {% include 'PMTWebBundle:Issue:form_people.html.twig' with {'form': form} %}
             </div>
         </div>
         <div class="row">
