--- a/src/PMT/WebBundle/Resources/views/Project/editForm.html.twig
+++ b/src/PMT/WebBundle/Resources/views/Project/editForm.html.twig
@@ -36,120 +36,20 @@
                     {{ form_errors(form) }}
 
                     <div class="tab-content">
-
                         <div class="tab-pane active" id="details">
-                            <div class="row">
-                                <div class="col-lg-12">
-                                    <div class="accordion">
-                                        <div class="accordion-group">
-                                            <div class="accordion-heading">
-                                                <a class="accordion-toggle" data-toggle="collapse" href="#">
-                                                    Details
-                                                </a>
-                                            </div>
-                                            <div class="accordion-body collapse in">
-                                                <div class="accordion-inner">
-                                                    <div class="form-group">
-                                                        {{ form_label(form.name) }}
-                                                        {{ form_widget(form.name, {'attr': {'class': 'form-control' }}) }}
-                                                    </div>
-                                                    <div class="form-group">
-                                                        {{ form_label(form.code) }}
-                                                        {{ form_widget(form.code, {'attr': {'class': 'form-control' }}) }}
-                                                    </div>
-                                                    <div class="form-group">
-                                                        {{ form_label(form.description) }}
-                                                        {{ form_widget(form.description, {'attr': {'class': 'form-control' }}) }}
-                                                    </div>
-                                                </div>
-                                            </div>
-                                        </div>
-                                    </div>
-                                </div>
-                            </div>
+                            {% include 'PMTWebBundle:Project:editForm_details.html.twig' with {'form': form} %}
                         </div>
-
                         <div class="tab-pane" id="people">
-                            <div class="row">
-                                <div class="col-lg-12">
-                                    <div class="accordion">
-                                        <div class="accordion-group">
-                                            <div class="accordion-heading">
-                                                <a class="accordion-toggle" data-toggle="collapse" href="#">
-                                                    People
-                                                </a>
-                                            </div>
-                                            <div class="accordion-body collapse in">
-                                                <div class="accordion-inner">
-                                                    <div class="form-group">
-                                                        {{ form_label(form.creator) }}
-                                                        {{ form_widget(form.creator, {'attr': {'class': 'form-control' }}) }}
-                                                    </div>
-                                                </div>
-                                            </div>
-                                        </div>
-                                    </div>
-                                </div>
-                            </div>
+                            {% include 'PMTWebBundle:Project:editForm_people.html.twig' with {'form': form} %}
                         </div>
 
                         <div class="tab-pane" id="workflow">
-                            <div class="row">
-                                <div class="col-lg-12">
-                                    <div class="accordion">
-                                        <div class="accordion-group">
-                                            <div class="accordion-heading">
-                                                <a class="accordion-toggle" data-toggle="collapse" href="#">
-                                                    Workflow
-                                                </a>
-                                            </div>
-                                            <div class="accordion-body collapse in">
-                                                <div class="accordion-inner">
-                                                    <div class="form-group">
-                                                        {{ form_label(form.workflow) }}
-                                                        {{ form_widget(form.workflow, {'attr': {'class': 'form-control' }}) }}
-                                                    </div>
-                                                </div>
-                                            </div>
-                                        </div>
-                                    </div>
-                                </div>
-                            </div>
+                            {% include 'PMTWebBundle:Project:editForm_workflow.html.twig' with {'form': form} %}
                         </div>
 
                         <div class="tab-pane" id="milestones">
-                            <div class="row">
-                                <div class="col-lg-12">
-                                    <div class="accordion">
-                                        <div class="accordion-group">
-                                            <div class="accordion-heading">
-                                                <a class="accordion-toggle" data-toggle="collapse" href="#">
-                                                    Milestones
-                                                </a>
-                                            </div>
-                                            <div class="accordion-body collapse in">
-                                                <div class="accordion-inner">
-                                                    <ul class="list-unstyled milestones">
-                                                        {% for milestone in form.milestones %}
-                                                            <li class="row">
-                                                                <div class="col-lg-5">
-                                                                    {{ form_row(milestone.name) }}
-                                                                </div>
-                                                                <div class="col-lg-5">
-                                                                    {{ form_row(milestone.dueDate) }}
-                                                                </div>
-                                                                <div class="col-lg-2 actions"></div>
-                                                            </li>
-                                                        {% endfor %}
-                                                    </ul>
-                                                </div>
-                                            </div>
-                                        </div>
-                                    </div>
-                                </div>
-                            </div>
+                            {% include 'PMTWebBundle:Project:editForm_milestones.html.twig' with {'form': form} %}
                         </div>
-
                     </div>
                 </div>
 
@@ -172,78 +72,8 @@
 {% endblock %}
 
 {% block body_scripts %}
-    <script>
-        var collectionHolder = $('ul.milestones');
-        collectionHolder.find('li').each(function() {
-            addMilestoneFormDeleteLink($(this));
-        });
-
-        var formTemplate = '<div class="col-lg-5">'
-                + '<label for="project_edit_milestones_2_name" class="required">Name</label><input type="text" id="project_edit_milestones_2_name" name="project_edit[milestones][2][name]" required="required" />'
-                + '</div>'
-                + '<div class="col-lg-5">'
-                + '<label for="project_edit_milestones_2_dueDate">Due date</label><input type="date" id="project_edit_milestones_2_dueDate" name="project_edit[milestones][2][dueDate]" />'
-                + '</div>'
-                + '<div class="col-lg-2 actions"></div>';
-        var $addMilestoneLink = $('<a href="#" class="add_milestone_link">Add a milestone</a>');
-        var $newLinkLi = $('<li></li>').append($addMilestoneLink);
-
-        function addMilestoneForm(collectionHolder, $newLinkLi) {
-            var index = collectionHolder.data('index');
-            var newForm = formTemplate.replace(/__name__/g, index);
-
-            collectionHolder.data('index', index + 1);
-
-            var $newFormLi = $('<li class="row"></li>').append(newForm);
-            $newLinkLi.before($newFormLi);
-            addMilestoneFormDeleteLink($newFormLi);
-
-            $('input[type="date"]').datepicker({
-                format: 'yyyy-mm-dd'
-            });
-        }
-
-        function addMilestoneFormDeleteLink($milestoneFormLi) {
-            var $removeFormA = $('<a href="#"><i class="glyphicon glyphicon-remove" title="delete this milestone"></a>');
-            $milestoneFormLi.find('div.actions').append($removeFormA);
-
-            $removeFormA.on('click', function(e) {
-                e.preventDefault();
-                $milestoneFormLi.remove();
-            });
-        }
-
-        $(function () {
-            $('select').select2();
-            $('#issue_tags').select2({
-                'tags': true,
-                'multiple': true,
-                'minimumInputLength': 2,
-                'ajax': {
-                    'url': "/ajax/tags.json",
-                    'dataType': 'json',
-                    'type': 'post',
-                    'data': function (term, page) {
-                        return {
-                            'q': term,
-                            'add_new': true
-                        };
-                    },
-                    'results': function (data, page) {
-                        return {results: data.tags};
-                    }
-                }
-            });
-            $('input[type="date"]').datepicker({
-                format: 'yyyy-mm-dd'
-            });
-            collectionHolder.append($newLinkLi);
-            collectionHolder.data('index', collectionHolder.find(':input').length);
-
-            $addMilestoneLink.on('click', function(e) {
-                e.preventDefault();
-                addMilestoneForm(collectionHolder, $newLinkLi);
-            });
-        });
-    </script>
+    {% javascripts
+    '@PMTWebBundle/Resources/public/js/projectForm.js' %}
+    <script src="{{ asset_url }}"></script>
+    {% endjavascripts %}
 {% endblock %}
