Fix button dropdown style

--- a/src/PMT/WebBundle/Resources/views/Issue/detail_actions.html.twig
+++ b/src/PMT/WebBundle/Resources/views/Issue/detail_actions.html.twig
@@ -5,7 +5,7 @@
 
 {% block content %}
     <div class="btn-group">
-        <a class="btn dropdown-toggle" data-toggle="dropdown" href="#">
+        <a class="btn btn-default dropdown-toggle" data-toggle="dropdown" href="#">
             {{ issue.status.name }}
             <span class="caret"></span>
         </a>
