--- a/src/PMT/WebBundle/Resources/views/emptyLayout.html.twig
+++ b/src/PMT/WebBundle/Resources/views/emptyLayout.html.twig
@@ -11,19 +11,19 @@
     <link rel="shortcut icon" href="{{ asset('favicon.ico') }}"/>
 
     {% stylesheets
-        'bundles/pmtweb/vendor/bootstrap/css/bootstrap.min.css'
-        'bundles/pmtweb/vendor/bootstrap/css/bootstrap-glyphicons.css'
-        'bundles/pmtweb/vendor/select2/select2.css'
-        'bundles/pmtweb/css/select2-bootstrap.css'
+        'vendor/bootstrap/css/bootstrap.min.css'
+        'vendor/bootstrap/css/bootstrap-glyphicons.css'
+        'vendor/select2/select2.css'
+        'vendor/select2-bootstrap/select2-bootstrap.css'
         'bundles/pmtweb/css/main.css'
         filter='cssrewrite' %}
     <link rel="stylesheet" href="{{ asset_url }}" />
     {% endstylesheets %}
 
     {% javascripts
-    '@PMTWebBundle/Resources/public/js/jquery.min.js'
-    '@PMTWebBundle/Resources/public/vendor/select2/select2.min.js'
-    '@PMTWebBundle/Resources/public/vendor/momentjs/moment.min.js'
+    'vendor/jquery/jquery.min.js'
+    'vendor/select2/select2.min.js'
+    'vendor/momentjs/moment.min.js'
     '@PMTWebBundle/Resources/public/js/main.js' %}
     <script src="{{ asset_url }}"></script>
     {% endjavascripts %}
@@ -73,7 +73,7 @@
 
 </div>
 
-<script src="{{ asset('bundles/pmtweb/vendor/bootstrap/js/bootstrap.min.js') }}"></script>
+<script src="{{ asset('vendor/bootstrap/js/bootstrap.min.js') }}"></script>
 {% block body_scripts %}{% endblock %}
 </body>
 </html>
