Add projects link to navigation.

--- a/src/PMT/WebBundle/Resources/views/Menu/primary.html.twig
+++ b/src/PMT/WebBundle/Resources/views/Menu/primary.html.twig
@@ -29,7 +29,7 @@
                 {% endfor %}
                 <li class="divider"></li>
                 <li><a href="{{ path('pmtweb_project_form') }}">{{ 'project.link.create'|trans }}</a></li>
-                <li><a href="#">Settings</a></li>
+                <li><a href="{{ path('pmtweb_project_list') }}">List</a></li>
             </ul>
         </li>
         <li><a href="#about">About</a></li>
